--- a/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
+++ b/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
@@ -15,17 +15,17 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lLp-Md-ud5">
-                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5lj-Xy-MVW">
-                            <rect key="frame" x="20" y="6" width="37" height="34"/>
+                            <rect key="frame" x="20" y="50" width="37" height="34"/>
                             <state key="normal" title="返回"/>
                             <connections>
                                 <action selector="showCardsBonus:" destination="iN0-l3-epB" eventType="touchUpInside" id="DLK-wl-3lB"/>
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="集福卡" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5sG-49-mbF">
-                            <rect key="frame" x="172" y="9" width="70" height="28"/>
+                            <rect key="frame" x="172" y="53" width="70" height="28"/>
                             <fontDescription key="fontDescription" type="system" pointSize="23"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -35,7 +35,7 @@
                     <constraints>
                         <constraint firstItem="5sG-49-mbF" firstAttribute="centerY" secondItem="5lj-Xy-MVW" secondAttribute="centerY" id="ISD-El-dFn"/>
                         <constraint firstItem="5lj-Xy-MVW" firstAttribute="leading" secondItem="lLp-Md-ud5" secondAttribute="leading" constant="20" id="Jeo-ei-WVy"/>
-                        <constraint firstItem="5lj-Xy-MVW" firstAttribute="top" secondItem="lLp-Md-ud5" secondAttribute="top" constant="6" id="b47-Lk-JPW"/>
+                        <constraint firstItem="5lj-Xy-MVW" firstAttribute="top" secondItem="lLp-Md-ud5" secondAttribute="top" constant="50" id="b47-Lk-JPW"/>
                         <constraint firstItem="5sG-49-mbF" firstAttribute="centerX" secondItem="lLp-Md-ud5" secondAttribute="centerX" id="gH0-mW-bxU"/>
                     </constraints>
                 </view>
@@ -60,26 +60,26 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uZJ-LJ-69R">
-                            <rect key="frame" x="52" y="331.5" width="310.5" height="233"/>
+                            <rect key="frame" x="52" y="327" width="310.5" height="179"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="红包雨倒计时：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Yw-XU-u7W">
-                                    <rect key="frame" x="83.5" y="45" width="143" height="24"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="红包雨倒计时：" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Yw-XU-u7W">
+                                    <rect key="frame" x="94.5" y="30" width="121.5" height="20.5"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8d-eI-hg0">
-                                    <rect key="frame" x="145" y="97" width="20" height="39.5"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8d-eI-hg0">
+                                    <rect key="frame" x="147.5" y="65" width="15" height="30"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.33333333333333331" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="c8d-eI-hg0" firstAttribute="top" secondItem="1Yw-XU-u7W" secondAttribute="bottom" constant="14.5" id="1Xz-0H-DNd"/>
                                 <constraint firstItem="1Yw-XU-u7W" firstAttribute="centerX" secondItem="uZJ-LJ-69R" secondAttribute="centerX" id="DA9-oQ-w7S"/>
-                                <constraint firstItem="1Yw-XU-u7W" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" constant="45" id="NCh-80-lva"/>
-                                <constraint firstItem="c8d-eI-hg0" firstAttribute="centerY" secondItem="uZJ-LJ-69R" secondAttribute="centerY" id="Ojw-nG-Gdd"/>
+                                <constraint firstItem="1Yw-XU-u7W" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" constant="30" id="NCh-80-lva"/>
                                 <constraint firstItem="c8d-eI-hg0" firstAttribute="centerX" secondItem="uZJ-LJ-69R" secondAttribute="centerX" id="Zss-jL-hLW"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
@@ -92,9 +92,19 @@
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5j4-AX-VrT">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_cardbtn" translatesAutoresizingMaskIntoConstraints="NO" id="CPE-GX-UqE">
+                                    <rect key="frame" x="306" y="694" width="108" height="172"/>
+                                </imageView>
                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eqy-K3-5tk">
-                                    <rect key="frame" x="302" y="792" width="92" height="34"/>
-                                    <state key="normal" title="集福卡大奖"/>
+                                    <rect key="frame" x="306" y="694" width="108" height="172"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="108" id="ecr-sA-qBD"/>
+                                        <constraint firstAttribute="height" constant="172" id="wYJ-pk-mhC"/>
+                                    </constraints>
+                                    <state key="normal" title=" ">
+                                        <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </state>
                                     <connections>
                                         <action selector="showCardsBonus:" destination="iN0-l3-epB" eventType="touchUpInside" id="4aA-Yh-2p3"/>
                                     </connections>
@@ -102,8 +112,12 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="Eqy-K3-5tk" secondAttribute="trailing" constant="20" id="L7h-JA-Mfi"/>
-                                <constraint firstAttribute="bottom" secondItem="Eqy-K3-5tk" secondAttribute="bottom" constant="70" id="eIf-1i-Ykg"/>
+                                <constraint firstItem="CPE-GX-UqE" firstAttribute="bottom" secondItem="Eqy-K3-5tk" secondAttribute="bottom" id="ADE-iD-VFe"/>
+                                <constraint firstItem="CPE-GX-UqE" firstAttribute="trailing" secondItem="Eqy-K3-5tk" secondAttribute="trailing" id="J7n-mM-w3v"/>
+                                <constraint firstItem="CPE-GX-UqE" firstAttribute="leading" secondItem="Eqy-K3-5tk" secondAttribute="leading" id="JMe-YM-1eJ"/>
+                                <constraint firstAttribute="trailing" secondItem="Eqy-K3-5tk" secondAttribute="trailing" id="L7h-JA-Mfi"/>
+                                <constraint firstAttribute="bottom" secondItem="Eqy-K3-5tk" secondAttribute="bottom" constant="30" id="eIf-1i-Ykg"/>
+                                <constraint firstItem="CPE-GX-UqE" firstAttribute="top" secondItem="Eqy-K3-5tk" secondAttribute="top" id="gxu-H7-tcW"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvp-tm-3gR">
@@ -128,13 +142,13 @@
                     </subviews>
                     <color key="backgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="uZJ-LJ-69R" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.26" id="27x-Yy-82o"/>
+                        <constraint firstItem="uZJ-LJ-69R" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.2" id="27x-Yy-82o"/>
                         <constraint firstAttribute="trailing" secondItem="vvp-tm-3gR" secondAttribute="trailing" constant="20" id="7NP-hh-ITK"/>
                         <constraint firstItem="5j4-AX-VrT" firstAttribute="top" secondItem="Z5W-E5-F5r" secondAttribute="top" id="8Ri-E1-ZII"/>
                         <constraint firstItem="uZJ-LJ-69R" firstAttribute="width" secondItem="Z5W-E5-F5r" secondAttribute="width" multiplier="0.75" id="CfL-PI-D7X"/>
                         <constraint firstItem="5j4-AX-VrT" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" id="J7L-uY-Irx"/>
                         <constraint firstItem="vvp-tm-3gR" firstAttribute="centerY" secondItem="iIQ-1T-EZ8" secondAttribute="centerY" id="Kmd-84-ZWD"/>
-                        <constraint firstItem="uZJ-LJ-69R" firstAttribute="centerY" secondItem="Z5W-E5-F5r" secondAttribute="centerY" id="Ogg-p7-EqK"/>
+                        <constraint firstItem="uZJ-LJ-69R" firstAttribute="centerY" secondItem="Z5W-E5-F5r" secondAttribute="centerY" multiplier="0.93" id="Ogg-p7-EqK"/>
                         <constraint firstItem="iIQ-1T-EZ8" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" constant="20" id="Zok-hH-4c1"/>
                         <constraint firstItem="iIQ-1T-EZ8" firstAttribute="top" secondItem="Z5W-E5-F5r" secondAttribute="top" constant="50" id="at0-Ff-ZBq"/>
                         <constraint firstAttribute="trailing" secondItem="5j4-AX-VrT" secondAttribute="trailing" id="k4U-QU-dcJ"/>
@@ -189,7 +203,7 @@
                 <constraint firstItem="uSV-gi-6bB" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Tzu-kP-ZO7"/>
                 <constraint firstAttribute="bottom" secondItem="lLp-Md-ud5" secondAttribute="bottom" id="U8c-hX-IG9"/>
                 <constraint firstItem="Z5W-E5-F5r" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="XxZ-RO-ruL"/>
-                <constraint firstItem="lLp-Md-ud5" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="YyI-dt-NFZ"/>
+                <constraint firstItem="lLp-Md-ud5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="YyI-dt-NFZ"/>
                 <constraint firstItem="uSV-gi-6bB" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="bNj-3H-AwN"/>
                 <constraint firstAttribute="trailing" secondItem="lLp-Md-ud5" secondAttribute="trailing" id="bdj-Yf-2II"/>
                 <constraint firstItem="Z5W-E5-F5r" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="giC-8f-6kE"/>
@@ -197,6 +211,7 @@
             </constraints>
             <connections>
                 <outlet property="activityRuleView" destination="H7g-Yz-Bzf" id="4rO-7h-E14"/>
+                <outlet property="backToRedPacketsViewBtn" destination="5lj-Xy-MVW" id="pwy-VC-0TS"/>
                 <outlet property="bagView" destination="uSV-gi-6bB" id="XTu-0a-HMM"/>
                 <outlet property="cardsBonusView" destination="lLp-Md-ud5" id="MFh-Rc-dIl"/>
                 <outlet property="closeButton" destination="iIQ-1T-EZ8" id="bq9-Fl-P0L"/>
@@ -207,6 +222,7 @@
                 <outlet property="rainBackgroundView" destination="Z5W-E5-F5r" id="UnI-5z-k2h"/>
                 <outlet property="redPocketsRainView" destination="5j4-AX-VrT" id="t8Q-i3-s8u"/>
                 <outlet property="showCardsButton" destination="Eqy-K3-5tk" id="6VY-QL-mwo"/>
+                <outlet property="showCardsImageView" destination="CPE-GX-UqE" id="GhT-u6-7AR"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="130.58035714285714"/>
         </view>
@@ -214,5 +230,6 @@
     <resources>
         <image name="ic_forget_warring_logo" width="12" height="12"/>
         <image name="ic_new_year_pop_close_btn" width="38" height="38"/>
+        <image name="img_cardbtn" width="109" height="172"/>
     </resources>
 </document>
