--- a/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsPreView.xib
+++ b/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsPreView.xib
@@ -17,78 +17,86 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BB4-og-cM9">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
-                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="虎福贺新春 天降红包雨" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fja-mJ-W0U">
-                            <rect key="frame" x="119" y="150" width="176.5" height="84"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="popup-2" translatesAutoresizingMaskIntoConstraints="NO" id="2GA-h1-yZY">
+                            <rect key="frame" x="0.0" y="52" width="414" height="844"/>
+                        </imageView>
                         <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="smk-6m-Eye">
-                            <rect key="frame" x="85" y="334" width="244" height="128"/>
+                            <rect key="frame" x="90.5" y="334" width="233" height="49"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="红包雨倒计时" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6do-oV-xia">
-                                    <rect key="frame" x="55" y="30" width="134" height="27"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-time" translatesAutoresizingMaskIntoConstraints="NO" id="7gB-SX-QOb">
+                                    <rect key="frame" x="0.0" y="0.0" width="233" height="49"/>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="红包雨倒计时:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6do-oV-xia">
+                                    <rect key="frame" x="10" y="11" width="115" height="27"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="27" id="Yok-d0-Br9"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                    <color key="textColor" red="0.92156862745098034" green="0.47843137254901957" blue="0.45098039215686275" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15秒" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9H-bN-JWL">
-                                    <rect key="frame" x="104.5" y="57" width="35" height="71"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15s" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9H-bN-JWL">
+                                    <rect key="frame" x="197" y="14" width="26" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="R9H-bN-JWL" firstAttribute="centerX" secondItem="smk-6m-Eye" secondAttribute="centerX" id="555-Vr-Tb2"/>
-                                <constraint firstAttribute="bottom" secondItem="R9H-bN-JWL" secondAttribute="bottom" id="AUC-zC-pCl"/>
-                                <constraint firstAttribute="width" secondItem="smk-6m-Eye" secondAttribute="height" multiplier="61:32" id="HOF-Lb-Dzd"/>
-                                <constraint firstItem="6do-oV-xia" firstAttribute="top" secondItem="smk-6m-Eye" secondAttribute="top" constant="30" id="NgO-A2-YrC"/>
-                                <constraint firstItem="R9H-bN-JWL" firstAttribute="top" secondItem="6do-oV-xia" secondAttribute="bottom" id="fz7-7W-owM"/>
-                                <constraint firstItem="6do-oV-xia" firstAttribute="centerX" secondItem="smk-6m-Eye" secondAttribute="centerX" id="m9S-eJ-kg7"/>
+                                <constraint firstAttribute="trailing" secondItem="R9H-bN-JWL" secondAttribute="trailing" constant="10" id="C6m-le-KKz"/>
+                                <constraint firstAttribute="trailing" secondItem="7gB-SX-QOb" secondAttribute="trailing" id="CPd-6H-M3U"/>
+                                <constraint firstItem="6do-oV-xia" firstAttribute="leading" secondItem="smk-6m-Eye" secondAttribute="leading" constant="10" id="MUd-ka-KhW"/>
+                                <constraint firstItem="7gB-SX-QOb" firstAttribute="top" secondItem="smk-6m-Eye" secondAttribute="top" id="P4e-bX-wva"/>
+                                <constraint firstItem="R9H-bN-JWL" firstAttribute="centerY" secondItem="6do-oV-xia" secondAttribute="centerY" id="U7o-5Z-kho"/>
+                                <constraint firstAttribute="bottom" secondItem="7gB-SX-QOb" secondAttribute="bottom" id="UXt-8M-UuA"/>
+                                <constraint firstItem="7gB-SX-QOb" firstAttribute="leading" secondItem="smk-6m-Eye" secondAttribute="leading" id="UY7-q4-x3Q"/>
+                                <constraint firstItem="6do-oV-xia" firstAttribute="centerY" secondItem="smk-6m-Eye" secondAttribute="centerY" id="Wbb-Ps-Wsp"/>
+                                <constraint firstAttribute="width" secondItem="smk-6m-Eye" secondAttribute="height" multiplier="85:18" id="XfJ-gl-umv"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bu8-g3-a5g">
-                            <rect key="frame" x="115" y="612" width="184" height="50"/>
-                            <color key="backgroundColor" red="0.038896907119999997" green="0.046977035700000003" blue="0.058825060730000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <rect key="frame" x="79.5" y="543" width="255" height="54"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="bu8-g3-a5g" secondAttribute="height" multiplier="92:25" id="Sk6-BK-PNR"/>
+                                <constraint firstAttribute="width" secondItem="bu8-g3-a5g" secondAttribute="height" multiplier="19:4" id="jWf-ck-BV2"/>
                             </constraints>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" title="立即参与抢红包">
-                                <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
-                                <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </buttonConfiguration>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title="  " backgroundImage="redPacketsBtn">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
                             <connections>
                                 <action selector="joinRedPacketAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="aL4-uO-DZJ"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cnk-eU-jeg">
-                            <rect key="frame" x="338" y="40" width="66" height="53"/>
-                            <state key="normal" title="Button"/>
-                            <buttonConfiguration key="configuration" style="plain" image="ic_new_year_pop_close_btn" title=" " subtitle=" "/>
+                            <rect key="frame" x="369" y="40" width="35" height="35"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="35" id="ZeW-HE-q0B"/>
+                                <constraint firstAttribute="height" constant="35" id="fG0-77-iR0"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" title=" " backgroundImage="assisClose"/>
                             <connections>
                                 <action selector="backButtonAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="5hT-Cy-Lxo"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="bu8-g3-a5g" firstAttribute="leading" secondItem="BB4-og-cM9" secondAttribute="leading" constant="115" id="341-ha-iwO"/>
-                        <constraint firstAttribute="trailing" secondItem="smk-6m-Eye" secondAttribute="trailing" constant="85" id="5nh-tL-uOW"/>
-                        <constraint firstItem="smk-6m-Eye" firstAttribute="top" secondItem="fja-mJ-W0U" secondAttribute="bottom" constant="100" id="Cl9-bi-SHq"/>
+                        <constraint firstAttribute="bottom" secondItem="2GA-h1-yZY" secondAttribute="bottom" id="1Hb-vy-3Id"/>
+                        <constraint firstItem="bu8-g3-a5g" firstAttribute="centerX" secondItem="BB4-og-cM9" secondAttribute="centerX" id="3Si-2a-dKZ"/>
+                        <constraint firstItem="2GA-h1-yZY" firstAttribute="top" secondItem="BB4-og-cM9" secondAttribute="topMargin" id="IQc-io-HRt"/>
+                        <constraint firstItem="2GA-h1-yZY" firstAttribute="leading" secondItem="BB4-og-cM9" secondAttribute="leading" id="TQ4-4f-d71"/>
+                        <constraint firstAttribute="trailing" secondItem="2GA-h1-yZY" secondAttribute="trailing" id="VIP-0B-zaZ"/>
                         <constraint firstItem="smk-6m-Eye" firstAttribute="centerX" secondItem="BB4-og-cM9" secondAttribute="centerX" id="YHC-YR-wxp"/>
-                        <constraint firstItem="fja-mJ-W0U" firstAttribute="centerX" secondItem="BB4-og-cM9" secondAttribute="centerX" id="b7Y-L7-i7A"/>
-                        <constraint firstItem="bu8-g3-a5g" firstAttribute="top" secondItem="smk-6m-Eye" secondAttribute="bottom" constant="150" id="fmn-ld-DmV"/>
+                        <constraint firstItem="bu8-g3-a5g" firstAttribute="height" secondItem="BB4-og-cM9" secondAttribute="height" multiplier="0.06" id="dep-Ub-fM5"/>
+                        <constraint firstItem="smk-6m-Eye" firstAttribute="centerY" secondItem="BB4-og-cM9" secondAttribute="centerY" multiplier="0.8" id="eT3-O0-g7t"/>
+                        <constraint firstItem="bu8-g3-a5g" firstAttribute="top" secondItem="smk-6m-Eye" secondAttribute="bottom" constant="160" id="fmn-ld-DmV"/>
                         <constraint firstItem="cnk-eU-jeg" firstAttribute="top" secondItem="BB4-og-cM9" secondAttribute="top" constant="40" id="h9n-Gh-JEv"/>
+                        <constraint firstItem="smk-6m-Eye" firstAttribute="height" secondItem="BB4-og-cM9" secondAttribute="height" multiplier="0.055" id="kUX-kA-2qo"/>
                         <constraint firstAttribute="trailing" secondItem="cnk-eU-jeg" secondAttribute="trailing" constant="10" id="kwm-db-GVj"/>
-                        <constraint firstAttribute="trailing" secondItem="bu8-g3-a5g" secondAttribute="trailing" constant="115" id="oCE-Xh-8uX"/>
-                        <constraint firstItem="smk-6m-Eye" firstAttribute="leading" secondItem="BB4-og-cM9" secondAttribute="leading" constant="85" id="tWD-bS-uyY"/>
-                        <constraint firstItem="fja-mJ-W0U" firstAttribute="top" secondItem="BB4-og-cM9" secondAttribute="top" constant="150" id="wpq-mg-zRf"/>
                     </constraints>
                 </view>
             </subviews>
@@ -103,11 +111,15 @@
             <connections>
                 <outlet property="backgroundView" destination="BB4-og-cM9" id="yRX-Zp-qWk"/>
                 <outlet property="countDownSenondLabel" destination="R9H-bN-JWL" id="Ul0-FB-mHu"/>
+                <outlet property="titleLabel" destination="6do-oV-xia" id="sbZ-VT-btE"/>
             </connections>
             <point key="canvasLocation" x="131.8840579710145" y="130.58035714285714"/>
         </view>
     </objects>
     <resources>
-        <image name="ic_new_year_pop_close_btn" width="38" height="38"/>
+        <image name="assisClose" width="58" height="58"/>
+        <image name="bg-time" width="338" height="72"/>
+        <image name="popup-2" width="738" height="1580"/>
+        <image name="redPacketsBtn" width="376" height="80"/>
     </resources>
 </document>
