--- a/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
+++ b/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
@@ -59,8 +59,20 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z5W-E5-F5r">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="915"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_img1" translatesAutoresizingMaskIntoConstraints="NO" id="4ai-aZ-ASY">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-img" translatesAutoresizingMaskIntoConstraints="NO" id="4ai-aZ-ASY">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="915"/>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_tiger1" translatesAutoresizingMaskIntoConstraints="NO" id="yop-nb-ipe">
+                            <rect key="frame" x="-10" y="738.5" width="178" height="186.5"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="yop-nb-ipe" secondAttribute="height" multiplier="21:22" id="YDn-5s-eUc"/>
+                            </constraints>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_tiger2" translatesAutoresizingMaskIntoConstraints="NO" id="957-0o-zq3">
+                            <rect key="frame" x="246" y="739" width="178" height="186"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="957-0o-zq3" secondAttribute="height" multiplier="89:93" id="wP0-Zg-Ujt"/>
+                            </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uZJ-LJ-69R">
                             <rect key="frame" x="52" y="328.5" width="310.5" height="331"/>
@@ -194,7 +206,7 @@
                             </connections>
                         </button>
                         <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_redbag_game" translatesAutoresizingMaskIntoConstraints="NO" id="Hzl-9X-Vwu">
-                            <rect key="frame" x="-30" y="712.5" width="220.5" height="262.5"/>
+                            <rect key="frame" x="-30" y="689" width="240" height="286"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Hzl-9X-Vwu" secondAttribute="height" multiplier="216:257" id="NQz-CQ-8AC"/>
                             </constraints>
@@ -203,6 +215,7 @@
                     <color key="backgroundColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="uZJ-LJ-69R" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.362" id="27x-Yy-82o"/>
+                        <constraint firstAttribute="bottom" secondItem="yop-nb-ipe" secondAttribute="bottom" constant="-10" id="2Kc-w7-KoT"/>
                         <constraint firstItem="6r7-hV-H7p" firstAttribute="centerX" secondItem="Z5W-E5-F5r" secondAttribute="centerX" id="3U9-Fn-5C0"/>
                         <constraint firstAttribute="trailing" secondItem="vvp-tm-3gR" secondAttribute="trailing" constant="20" id="7NP-hh-ITK"/>
                         <constraint firstItem="KM6-iW-BSr" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" constant="-50" id="BSO-vp-cBo"/>
@@ -213,22 +226,27 @@
                         <constraint firstAttribute="trailing" secondItem="SuI-Re-pzy" secondAttribute="trailing" id="JCG-CY-YeA"/>
                         <constraint firstItem="vvp-tm-3gR" firstAttribute="centerY" secondItem="iIQ-1T-EZ8" secondAttribute="centerY" id="Kmd-84-ZWD"/>
                         <constraint firstItem="uZJ-LJ-69R" firstAttribute="centerY" secondItem="Z5W-E5-F5r" secondAttribute="centerY" multiplier="1.08" id="Ogg-p7-EqK"/>
-                        <constraint firstItem="Hzl-9X-Vwu" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.28667" id="UdF-IH-1dJ"/>
+                        <constraint firstAttribute="bottom" secondItem="957-0o-zq3" secondAttribute="bottom" constant="-10" id="TlY-0E-MaU"/>
+                        <constraint firstItem="Hzl-9X-Vwu" firstAttribute="width" secondItem="Z5W-E5-F5r" secondAttribute="width" multiplier="0.58" id="W6L-Zx-sLD"/>
                         <constraint firstItem="4ai-aZ-ASY" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" id="XPi-cJ-4yS"/>
                         <constraint firstItem="iIQ-1T-EZ8" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" constant="20" id="Zok-hH-4c1"/>
                         <constraint firstItem="5j4-AX-VrT" firstAttribute="top" secondItem="6r7-hV-H7p" secondAttribute="bottom" constant="-50" id="a0m-k7-Pqu"/>
                         <constraint firstAttribute="bottom" secondItem="4ai-aZ-ASY" secondAttribute="bottom" id="ap3-28-9Ry"/>
                         <constraint firstItem="iIQ-1T-EZ8" firstAttribute="top" secondItem="Z5W-E5-F5r" secondAttribute="top" constant="50" id="at0-Ff-ZBq"/>
                         <constraint firstItem="SuI-Re-pzy" firstAttribute="bottom" secondItem="uZJ-LJ-69R" secondAttribute="bottom" constant="-50" id="bUZ-GW-DUg"/>
+                        <constraint firstAttribute="trailing" secondItem="957-0o-zq3" secondAttribute="trailing" constant="-10" id="fUE-iz-5VB"/>
                         <constraint firstItem="KM6-iW-BSr" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.160714" id="gd2-Dm-Tmv"/>
                         <constraint firstAttribute="trailing" secondItem="5j4-AX-VrT" secondAttribute="trailing" id="k4U-QU-dcJ"/>
                         <constraint firstAttribute="bottom" secondItem="5j4-AX-VrT" secondAttribute="bottom" id="lwJ-Tr-eJC"/>
                         <constraint firstItem="4ai-aZ-ASY" firstAttribute="top" secondItem="Z5W-E5-F5r" secondAttribute="top" id="pXh-3Y-jSM"/>
                         <constraint firstAttribute="trailing" secondItem="4ai-aZ-ASY" secondAttribute="trailing" id="rU2-R3-3Xn"/>
                         <constraint firstAttribute="bottom" secondItem="Hzl-9X-Vwu" secondAttribute="bottom" constant="-60" id="t8D-U1-jQd"/>
+                        <constraint firstItem="957-0o-zq3" firstAttribute="width" secondItem="Z5W-E5-F5r" secondAttribute="width" multiplier="0.429952" id="tWf-tS-Jlt"/>
                         <constraint firstItem="uZJ-LJ-69R" firstAttribute="centerX" secondItem="Z5W-E5-F5r" secondAttribute="centerX" id="upb-8d-hBq"/>
+                        <constraint firstItem="yop-nb-ipe" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" constant="-10" id="xM4-jx-Jch"/>
                         <constraint firstItem="KM6-iW-BSr" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" id="xj4-zY-Bwa"/>
                         <constraint firstItem="Hzl-9X-Vwu" firstAttribute="leading" secondItem="Z5W-E5-F5r" secondAttribute="leading" constant="-30" id="yiQ-qh-isY"/>
+                        <constraint firstItem="yop-nb-ipe" firstAttribute="width" secondItem="Z5W-E5-F5r" secondAttribute="width" multiplier="0.43" id="zoi-rN-kYV"/>
                     </constraints>
                 </view>
                 <view hidden="YES" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uSV-gi-6bB">
@@ -699,12 +717,14 @@
                 <outlet property="showCardsImageView" destination="CPE-GX-UqE" id="GhT-u6-7AR"/>
                 <outletCollection property="flyingRedPacketsArray" destination="KM6-iW-BSr" id="iwN-hy-x2K"/>
                 <outletCollection property="flyingRedPacketsArray" destination="SuI-Re-pzy" id="SlQ-rh-1EZ"/>
+                <outletCollection property="tigerImageViewArray" destination="yop-nb-ipe" id="Y4e-7Y-9jk"/>
+                <outletCollection property="tigerImageViewArray" destination="957-0o-zq3" id="zav-Tm-4Xk"/>
             </connections>
             <point key="canvasLocation" x="-181.15942028985509" y="97.767857142857139"/>
         </view>
     </objects>
     <resources>
-        <image name="bg_img1" width="375" height="812"/>
+        <image name="bg-img" width="375" height="812"/>
         <image name="bgimg_popup" width="278" height="386"/>
         <image name="icon_card_popup" width="18" height="26"/>
         <image name="icon_card_popup_2" width="18" height="26"/>
@@ -720,6 +740,8 @@
         <image name="img_redbag" width="200" height="200"/>
         <image name="img_redbag_game" width="216" height="257"/>
         <image name="img_redenvelope_click" width="97" height="144"/>
+        <image name="img_tiger1" width="210" height="220"/>
+        <image name="img_tiger2" width="178" height="186"/>
         <image name="mammon1" width="702" height="394"/>
     </resources>
 </document>
